--- a/desktop/build.gradle
+++ b/desktop/build.gradle
@@ -2,6 +2,7 @@ sourceCompatibility = 1.8
 sourceSets.main.java.srcDirs = [ "src/" ]
 sourceSets.main.resources.srcDirs = ["../assets"]
 
+project.ext.serverClassName = "net.cmr.rtd.ServerLauncher"
 project.ext.mainClassName = "net.cmr.rtd.DesktopLauncher"
 project.ext.assetsDir = new File("../assets")
 
@@ -10,6 +11,20 @@ import org.gradle.internal.os.OperatingSystem
 tasks.register('run', JavaExec) {
     dependsOn classes
     mainClass = project.mainClassName
+    classpath = sourceSets.main.runtimeClasspath
+    standardInput = System.in
+    workingDir = project.assetsDir
+    ignoreExitValue = true
+
+    if (OperatingSystem.current() == OperatingSystem.MAC_OS) {
+        // Required to run on macOS
+        jvmArgs += "-XstartOnFirstThread"
+    }
+}
+
+tasks.register('run-server', JavaExec) {
+    dependsOn classes
+    mainClass = project.serverClassName
     classpath = sourceSets.main.runtimeClasspath
     standardInput = System.in
     workingDir = project.assetsDir
@@ -35,6 +50,18 @@ tasks.register('dist', Jar) {
     duplicatesStrategy(DuplicatesStrategy.EXCLUDE)
     manifest {
         attributes 'Main-Class': project.mainClassName
+    }
+    dependsOn configurations.runtimeClasspath
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+    with jar
+}
+
+tasks.register('dist-server', Jar) {
+    duplicatesStrategy(DuplicatesStrategy.EXCLUDE)
+    manifest {
+        attributes 'Main-Class': project.serverClassName
     }
     dependsOn configurations.runtimeClasspath
     from {
