--- a/build.gradle
+++ b/build.gradle
@@ -105,6 +105,13 @@ project(":tests") {
         testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
         testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
         testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+
+        
+        testImplementation group: 'com.esotericsoftware', name: 'kryo', version: '5.4.0'
+        testImplementation group: 'kryonet', name: 'kryonet', version: '2.21'
+        testImplementation 'com.esotericsoftware:kryo:5.4.0:sources'
+        testImplementation "games.spooky.gdx:gdx-nativefilechooser:$gdxNativefilechooserVersion"
+
         testImplementation "com.badlogicgames.gdx:gdx-backend-headless:$gdxVersion"
         testImplementation "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
         testImplementation "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop"
