--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,7 @@ project(":core") {
     dependencies {
         api group: 'com.esotericsoftware', name: 'kryo', version: '5.4.0'
         api group: 'kryonet', name: 'kryonet', version: '2.21'
+        api group: 'org.bitlet', name: 'weupnp', version: '0.1.2'
         api 'commons-io:commons-io:2.15.1'
         api 'com.googlecode.json-simple:json-simple:1.1.1'
         
