Fixed endless mode NaN bug, added framework to edit a tower's targeting style, added more wave file customization options

--- a/assets/storylevels/COMP 2s - Split/waves/quest_endless_easy.json
+++ b/assets/storylevels/COMP 2s - Split/waves/quest_endless_easy.json
@@ -1,6 +1,7 @@
 {
 	"difficulty": 1,
-	"name": "Endless",
+	"recommendedEndlessSettingsDifficulty": 1,
+	"name": "Endless Easy",
 	"endlessMode": true,
 	"preparationTime": 10,
 	"startingHealth": 50,
