Minor fixes, modified android build to prevent errors

--- a/build.gradle
+++ b/build.gradle
@@ -95,8 +95,8 @@ project(":android") {
 
     configurations {
         natives
-        api.exclude group: 'com.esotericsoftware', module: 'minlog'
-        api.exclude group: 'com.esotericsoftware', module: 'reflectasm'
+        // api.exclude group: 'com.esotericsoftware', module: 'minlog'
+        // api.exclude group: 'com.esotericsoftware', module: 'reflectasm'
     }
 
     dependencies {
