--- a/local.properties
+++ b/local.properties
@@ -1,3 +1,8 @@
-# Location of the android SDK
-sdk.dir=Q:/SDKS
-# sdk.dir=C:/Users/cmrbo/AppData/Local/Android/Sdk
+## This file must *NOT* be checked into Version Control Systems,
+# as it contains information specific to your local configuration.
+#
+# Location of the SDK. This is only used by Gradle.
+# For customization when using a Version Control System, please read the
+# header note.
+#Mon Sep 23 15:37:22 CDT 2024
+sdk.dir=C\:\\Users\\cmrbo\\AppData\\Local\\Android\\Sdk
